tests/03-typecheck/08-arith.stack
func arithmetic_test (int, bool) (int) in
    +
end
